BuildHughes/translation-tool/inputs/source_meta/objects/Common_SupportedCurrency__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencySymbol__c</fullName>
        <label>CurrencySymbol</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoundOff_Number__c</fullName>
        <label>RoundOff_Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoundUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RoundUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Round</label>
        <type>Checkbox</type>
    </fields>
    <label>Common_SupportedCurrency</label>
</CustomObject>